# apertium-separable

./: .gitignore  AUTHORS  Makefile.am  README  apertium-separable.pc.in  configure.ac
.github/workflows/: build.yaml
corpus/: english.input  english.ref  english.src  english.tst
examples/: Makefile  apertium-eng-kaz.kaz-eng.lsx  apertium-eng-spa.eng-spa.lsx  apertium-fao-nor.fao-nor.lsx  apertium-kaz-kir.kir-kaz.lsx  convert-mwe-att.py  example.2.att  example.dix  new-example.dix  nob-nno.dix  septest.lsx  short-example.dix
fst/: Makefile
locales/: Makefile.am  root.txt
scripts/: att2dot.py  convert-mwe-att.py  reap_multiwords.py
src/: Makefile  Makefile.am  TODO  compiler.cc  compiler.h  compiler_copy.cc  compiler_copy.h  fst_processor.cc  lsx_FSTProcessor.cc  lsx_FSTProcessor.h  lsx_comp.cc  lsx_compiler.cc  lsx_compiler.cpp  lsx_compiler.h  lsx_proc.cc  lsx_processor.cc  lsx_processor.h  processor.cpp  processor2.cpp  processor3.cc  processor3.cpp  transducer.cpp  transducer.py  transducer2.cc  transducer2.cpp
takeout/: Makefile  README  takeout.dot  takeout.fst  transducer2
takeout/transducer2.dSYM/Contents/: Info.plist
takeout/transducer2.dSYM/Contents/Resources/DWARF/: transducer2
testing/: Makefile  acceptor.py  correct_testfile.txt  evaluate.py  incorrect_testfile.txt  report.txt  run-tests.sh  small_testfile.txt  test.cc  test.dix  testfile.txt  transducer.cpp  transducer.py  wdiff.txt
tests/: proctest.py  run_tests.py
tests/data/: capitalization.dix  empty.lsx  forms.lsx  postgen.lsx  repeat.lsx  short-example.dix  spaces.lsx  variants.dix  weights.lsx
tests/lsx_proc/: __init__.py
